...
            <View>
              <View className="flex-row items-center justify-between px-5">
                <TouchableOpacity onPress={() => navigation.back()}>
                  <Feather name={"arrow-left"} size={30} />
                </TouchableOpacity>
                <TouchableOpacity
                  testID="logout-button"
                  accessibilityLabel="Logout"
                  className="flex-row items-center"
                  onPress={onLogoutPress}
                >
                  <Text className="mr-2 font-inter text-sm font-medium text-foreground">Logout</Text>
                  <Feather name={"log-out"} size={24} />
...
