...
            <View
              className="h-[50%] flex-row items-center justify-between px-[10px]"
              style={{ marginTop: width > 500 ? "5%" : "15%", width }}
            >
              <View className="flex-row items-center justify-between" style={{ width: width > 500 ? "13%" : "27%" }}>
                <TouchableOpacity
                  testID="profile-button"
                  className="ml-2 items-center justify-center rounded-full bg-foreground"
                  style={{
                    width: width > 1000 ? 50 : 30,
                    height: width > 1000 ? 50 : 30,
                  }}
                  onPress={() => {
...
