...
    await syncEditorContent();

    if (hasNoteContent()) {
      setIsPublished(!isPublished);
      ToastMessage.show({
        type: "success",
        text1: isPublished ? "Note Unpublished" : "Note Published",
        visibilityTime: 3000,
      });
      await saveNote(true);
    }
  };

...
              tags={tags}
              setTags={setTags}
              insertImageToEditor={insertImageToEditor}
              addVideoToEditor={addVideoToEditor}
              insertAudioToEditor={insertAudioToEditor}
            />
            <NoteEditorBody editor={editor} testID="TenTapEditor" />
          </View>
        </ScrollView>
        <Modal animationType="slide" transparent={true} visible={isVideoModalVisible} onRequestClose={() => setIsVideoModalVisible(false)}>
          <View className="flex-1 items-center justify-center bg-black/50">
            <View className="w-[90%] items-center rounded-[10px] bg-white p-5">
              {videoUri && <VideoView player={videoPlayer} nativeControls contentFit="contain" style={{ width: "100%", height: 200 }} />}
...
