...
import { useUserInfo, useNotesList, useAnimatedSearch, sortNotes, filterNotes } from "../hooks/useNotesList";
import { useUpdateNote } from "../hooks/mutations/useUpdateNote";
import Constants from "expo-constants";

const { width } = Dimensions.get("window");

const HomeScreen: React.FC = () => {
  const router = useRouter();
  const { isDarkmode } = useTheme();
  const { authUser, userInitials, userName } = useUserInfo();
  const { setNavigateToAddNote } = useAddNoteContext();
  const toggleAddNoteState = useAddNoteStore((s) => s.toggleAddNoteState);

...
                    onPress={() => {
                      setIsPrivate(false);
                      setPublished(true);
                    }}
                  >
                    <View
                      testID="public-btn"
                      className="rounded-lg px-[5px] py-[3px]"
                      style={{ backgroundColor: isPrivate ? "transparent" : "black" }}
                    >
                      <Text className="font-inter text-[10px] font-semibold" style={{ color: isPrivate ? "black" : "white" }}>
                        {" "}
                        Published
...
                    onPress={() => {
                      setIsPrivate(true);
                      setPublished(false);
                    }}
                  >
                    <View
                      testID="private-btn"
                      className="rounded-lg px-[5px] py-[3px]"
                      style={{ backgroundColor: isPrivate ? "black" : "transparent" }}
                    >
                      <Text className="font-inter text-[10px] font-semibold" style={{ color: isPrivate ? "white" : "black" }}>
                        Private
                      </Text>
...
