...
          shadowRadius: 20,
          elevation: 5,
        }}
      >
        <View className="w-[70%]">
          <Text numberOfLines={1} className="font-inter text-xs font-bold text-white">
            {marker.title || "Untitled"}
          </Text>
          <Text numberOfLines={1} className="font-inter text-xs text-white">
            {(typeof marker.description === "string" ? marker.description : "No description available")
              .replace(/<[^>]+>/g, "")
              .substring(0, 200)
              .trim()}
...
