import EditNoteScreen from "../lib/screens/EditNoteScreen";
export default EditNoteScreen;
