...
            </TouchableOpacity>
          ) : (
            <View
              className="h-[500px] w-[300px] items-center justify-center self-center rounded-[10px] bg-white/60 shadow-md"
              style={{ elevation: 10, shadowColor: "#000", shadowOpacity: 0.4, shadowRadius: 10 }}
            >
              <Text className="mb-[50px] font-inter text-[50px] font-bold text-[#111111]">Login</Text>
              <View className="mb-5 h-[50px] w-4/5 items-start justify-center rounded-full border-2 border-gray-500 bg-white p-5">
                <TextInput
                  className="h-[50px] w-full rounded-full font-inter text-[16px] text-[#111111]"
                  placeholder="Email..."
                  placeholderTextColor="#003f5c"
                  value={username}
...
                  onSubmitEditing={handleLogin}
                  testID="password-input"
                />
              </View>
              <TouchableOpacity onPress={() => router.push("/(auth)/forgot-password")}>
                <View className="w-[300px] items-end justify-center">
                  <Text className="mb-5 mr-10 text-[12px] font-normal text-[#111111]">Forgot Password?</Text>
                </View>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={onLoginPress}
                className="mb-[10px] h-[50px] w-[200px] items-center justify-center rounded-[30px] shadow-sm"
                style={{ backgroundColor: "rgb(17,47,187)", elevation: 10, shadowColor: "#000", shadowOpacity: 0.2, shadowRadius: 3 }}
...
